hw/5/dot.output
Rules useless in parser due to conflicts

    9 stmt_list: stmt


State 18 conflicts: 1 reduce/reduce


Grammar

    0 $accept: graph $end

    1 graph: strict graph_t id T_LBRACE stmt_list T_RBRACE

    2 strict: %empty
    3       | T_STRICT

    4 id: %empty
    5   | T_ID

    6 graph_t: T_GRAPH
    7        | T_DIGRAPH

    8 stmt_list: %empty
    9          | stmt
   10          | stmt stmt_list
   11          | stmt T_SEMICOLON stmt_list

   12 stmt: node_stmt
   13     | edge_stmt
   14     | attr_stmt
   15     | T_ID T_EQUALS T_ID
   16     | subgraph

   17 node_stmt: node_id attr_list
   18          | node_id

   19 node_id: T_ID port
   20        | T_ID

   21 port: T_COLON T_ID T_COLON compass_pt
   22     | T_COLON T_ID
   23     | T_COLON compass_pt

   24 compass_pt: T_N
   25           | T_NE
   26           | T_E
   27           | T_SE
   28           | T_S
   29           | T_SW
   30           | T_W
   31           | T_NW
   32           | T_C
   33           | T_UNDERSCORE

   34 attr_list: T_LBRACK a_list T_RBRACK attr_list
   35          | T_LBRACK a_list T_RBRACK

   36 a_list: T_ID T_EQUALS T_ID T_SEMICOLON a_list
   37       | T_ID T_EQUALS T_ID T_SEMICOLON
   38       | T_ID T_EQUALS T_ID T_COMMA a_list
   39       | T_ID T_EQUALS T_ID T_COMMA
   40       | T_ID T_EQUALS T_ID a_list
   41       | T_ID T_EQUALS T_ID

   42 edge_stmt: node_id edgeRHS
   43          | node_id edgeRHS attr_list
   44          | subgraph edgeRHS
   45          | subgraph edgeRHS attr_list

   46 edgeRHS: edgeop node_id
   47        | edgeop node_id edgeRHS
   48        | edgeop subgraph
   49        | edgeop subgraph edgeRHS

   50 edgeop: T_UEDGE
   51       | T_DEDGE

   52 attr_stmt: T_GRAPH attr_list
   53          | T_NODE attr_list
   54          | T_EDGE attr_list

   55 subgraph: T_LBRACE stmt_list T_RBRACE
   56         | T_SUBGRAPH T_LBRACE stmt_list T_RBRACE
   57         | T_SUBGRAPH T_ID T_LBRACE stmt_list T_RBRACE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_STRICT (258) 3
T_GRAPH (259) 6 52
T_DIGRAPH (260) 7
T_ID (261) 5 15 19 20 21 22 36 37 38 39 40 41 57
T_LBRACE (262) 1 55 56 57
T_RBRACE (263) 1 55 56 57
T_EQUALS (264) 15 36 37 38 39 40 41
T_NODE (265) 53
T_EDGE (266) 54
T_LBRACK (267) 34 35
T_RBRACK (268) 34 35
T_SEMICOLON (269) 11 36 37
T_COMMA (270) 38 39
T_DEDGE (271) 51
T_UEDGE (272) 50
T_COLON (273) 21 22 23
T_SUBGRAPH (274) 56 57
T_N (275) 24
T_NE (276) 25
T_E (277) 26
T_SE (278) 27
T_S (279) 28
T_SW (280) 29
T_W (281) 30
T_NW (282) 31
T_C (283) 32
T_UNDERSCORE (284) 33


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
graph (31)
    on left: 1, on right: 0
strict (32)
    on left: 2 3, on right: 1
id (33)
    on left: 4 5, on right: 1
graph_t (34)
    on left: 6 7, on right: 1
stmt_list (35)
    on left: 8 9 10 11, on right: 1 10 11 55 56 57
stmt (36)
    on left: 12 13 14 15 16, on right: 9 10 11
node_stmt (37)
    on left: 17 18, on right: 12
node_id (38)
    on left: 19 20, on right: 17 18 42 43 46 47
port (39)
    on left: 21 22 23, on right: 19
compass_pt (40)
    on left: 24 25 26 27 28 29 30 31 32 33, on right: 21 23
attr_list (41)
    on left: 34 35, on right: 17 34 43 45 52 53 54
a_list (42)
    on left: 36 37 38 39 40 41, on right: 34 35 36 38 40
edge_stmt (43)
    on left: 42 43 44 45, on right: 13
edgeRHS (44)
    on left: 46 47 48 49, on right: 42 43 44 45 47 49
edgeop (45)
    on left: 50 51, on right: 46 47 48 49
attr_stmt (46)
    on left: 52 53 54, on right: 14
subgraph (47)
    on left: 55 56 57, on right: 16 44 45 48 49


State 0

    0 $accept: . graph $end

    T_STRICT  shift, and go to state 1

    $default  reduce using rule 2 (strict)

    graph   go to state 2
    strict  go to state 3


State 1

    3 strict: T_STRICT .

    $default  reduce using rule 3 (strict)


State 2

    0 $accept: graph . $end

    $end  shift, and go to state 4


State 3

    1 graph: strict . graph_t id T_LBRACE stmt_list T_RBRACE

    T_GRAPH    shift, and go to state 5
    T_DIGRAPH  shift, and go to state 6

    graph_t  go to state 7


State 4

    0 $accept: graph $end .

    $default  accept


State 5

    6 graph_t: T_GRAPH .

    $default  reduce using rule 6 (graph_t)


State 6

    7 graph_t: T_DIGRAPH .

    $default  reduce using rule 7 (graph_t)


State 7

    1 graph: strict graph_t . id T_LBRACE stmt_list T_RBRACE

    T_ID  shift, and go to state 8

    $default  reduce using rule 4 (id)

    id  go to state 9


State 8

    5 id: T_ID .

    $default  reduce using rule 5 (id)


State 9

    1 graph: strict graph_t id . T_LBRACE stmt_list T_RBRACE

    T_LBRACE  shift, and go to state 10


State 10

    1 graph: strict graph_t id T_LBRACE . stmt_list T_RBRACE

    T_GRAPH     shift, and go to state 11
    T_ID        shift, and go to state 12
    T_LBRACE    shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_EDGE      shift, and go to state 15
    T_SUBGRAPH  shift, and go to state 16

    $default  reduce using rule 8 (stmt_list)

    stmt_list  go to state 17
    stmt       go to state 18
    node_stmt  go to state 19
    node_id    go to state 20
    edge_stmt  go to state 21
    attr_stmt  go to state 22
    subgraph   go to state 23


State 11

   52 attr_stmt: T_GRAPH . attr_list

    T_LBRACK  shift, and go to state 24

    attr_list  go to state 25


State 12

   15 stmt: T_ID . T_EQUALS T_ID
   19 node_id: T_ID . port
   20        | T_ID .

    T_EQUALS  shift, and go to state 26
    T_COLON   shift, and go to state 27

    $default  reduce using rule 20 (node_id)

    port  go to state 28


State 13

   55 subgraph: T_LBRACE . stmt_list T_RBRACE

    T_GRAPH     shift, and go to state 11
    T_ID        shift, and go to state 12
    T_LBRACE    shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_EDGE      shift, and go to state 15
    T_SUBGRAPH  shift, and go to state 16

    $default  reduce using rule 8 (stmt_list)

    stmt_list  go to state 29
    stmt       go to state 18
    node_stmt  go to state 19
    node_id    go to state 20
    edge_stmt  go to state 21
    attr_stmt  go to state 22
    subgraph   go to state 23


State 14

   53 attr_stmt: T_NODE . attr_list

    T_LBRACK  shift, and go to state 24

    attr_list  go to state 30


State 15

   54 attr_stmt: T_EDGE . attr_list

    T_LBRACK  shift, and go to state 24

    attr_list  go to state 31


State 16

   56 subgraph: T_SUBGRAPH . T_LBRACE stmt_list T_RBRACE
   57         | T_SUBGRAPH . T_ID T_LBRACE stmt_list T_RBRACE

    T_ID      shift, and go to state 32
    T_LBRACE  shift, and go to state 33


State 17

    1 graph: strict graph_t id T_LBRACE stmt_list . T_RBRACE

    T_RBRACE  shift, and go to state 34


State 18

    9 stmt_list: stmt .
   10          | stmt . stmt_list
   11          | stmt . T_SEMICOLON stmt_list

    T_GRAPH      shift, and go to state 11
    T_ID         shift, and go to state 12
    T_LBRACE     shift, and go to state 13
    T_NODE       shift, and go to state 14
    T_EDGE       shift, and go to state 15
    T_SEMICOLON  shift, and go to state 35
    T_SUBGRAPH   shift, and go to state 16

    T_RBRACE  reduce using rule 8 (stmt_list)
    T_RBRACE  [reduce using rule 9 (stmt_list)]
    $default  reduce using rule 8 (stmt_list)

    stmt_list  go to state 36
    stmt       go to state 18
    node_stmt  go to state 19
    node_id    go to state 20
    edge_stmt  go to state 21
    attr_stmt  go to state 22
    subgraph   go to state 23


State 19

   12 stmt: node_stmt .

    $default  reduce using rule 12 (stmt)


State 20

   17 node_stmt: node_id . attr_list
   18          | node_id .
   42 edge_stmt: node_id . edgeRHS
   43          | node_id . edgeRHS attr_list

    T_LBRACK  shift, and go to state 24
    T_DEDGE   shift, and go to state 37
    T_UEDGE   shift, and go to state 38

    $default  reduce using rule 18 (node_stmt)

    attr_list  go to state 39
    edgeRHS    go to state 40
    edgeop     go to state 41


State 21

   13 stmt: edge_stmt .

    $default  reduce using rule 13 (stmt)


State 22

   14 stmt: attr_stmt .

    $default  reduce using rule 14 (stmt)


State 23

   16 stmt: subgraph .
   44 edge_stmt: subgraph . edgeRHS
   45          | subgraph . edgeRHS attr_list

    T_DEDGE  shift, and go to state 37
    T_UEDGE  shift, and go to state 38

    $default  reduce using rule 16 (stmt)

    edgeRHS  go to state 42
    edgeop   go to state 41


State 24

   34 attr_list: T_LBRACK . a_list T_RBRACK attr_list
   35          | T_LBRACK . a_list T_RBRACK

    T_ID  shift, and go to state 43

    a_list  go to state 44


State 25

   52 attr_stmt: T_GRAPH attr_list .

    $default  reduce using rule 52 (attr_stmt)


State 26

   15 stmt: T_ID T_EQUALS . T_ID

    T_ID  shift, and go to state 45


State 27

   21 port: T_COLON . T_ID T_COLON compass_pt
   22     | T_COLON . T_ID
   23     | T_COLON . compass_pt

    T_ID          shift, and go to state 46
    T_N           shift, and go to state 47
    T_NE          shift, and go to state 48
    T_E           shift, and go to state 49
    T_SE          shift, and go to state 50
    T_S           shift, and go to state 51
    T_SW          shift, and go to state 52
    T_W           shift, and go to state 53
    T_NW          shift, and go to state 54
    T_C           shift, and go to state 55
    T_UNDERSCORE  shift, and go to state 56

    compass_pt  go to state 57


State 28

   19 node_id: T_ID port .

    $default  reduce using rule 19 (node_id)


State 29

   55 subgraph: T_LBRACE stmt_list . T_RBRACE

    T_RBRACE  shift, and go to state 58


State 30

   53 attr_stmt: T_NODE attr_list .

    $default  reduce using rule 53 (attr_stmt)


State 31

   54 attr_stmt: T_EDGE attr_list .

    $default  reduce using rule 54 (attr_stmt)


State 32

   57 subgraph: T_SUBGRAPH T_ID . T_LBRACE stmt_list T_RBRACE

    T_LBRACE  shift, and go to state 59


State 33

   56 subgraph: T_SUBGRAPH T_LBRACE . stmt_list T_RBRACE

    T_GRAPH     shift, and go to state 11
    T_ID        shift, and go to state 12
    T_LBRACE    shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_EDGE      shift, and go to state 15
    T_SUBGRAPH  shift, and go to state 16

    $default  reduce using rule 8 (stmt_list)

    stmt_list  go to state 60
    stmt       go to state 18
    node_stmt  go to state 19
    node_id    go to state 20
    edge_stmt  go to state 21
    attr_stmt  go to state 22
    subgraph   go to state 23


State 34

    1 graph: strict graph_t id T_LBRACE stmt_list T_RBRACE .

    $default  reduce using rule 1 (graph)


State 35

   11 stmt_list: stmt T_SEMICOLON . stmt_list

    T_GRAPH     shift, and go to state 11
    T_ID        shift, and go to state 12
    T_LBRACE    shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_EDGE      shift, and go to state 15
    T_SUBGRAPH  shift, and go to state 16

    $default  reduce using rule 8 (stmt_list)

    stmt_list  go to state 61
    stmt       go to state 18
    node_stmt  go to state 19
    node_id    go to state 20
    edge_stmt  go to state 21
    attr_stmt  go to state 22
    subgraph   go to state 23


State 36

   10 stmt_list: stmt stmt_list .

    $default  reduce using rule 10 (stmt_list)


State 37

   51 edgeop: T_DEDGE .

    $default  reduce using rule 51 (edgeop)


State 38

   50 edgeop: T_UEDGE .

    $default  reduce using rule 50 (edgeop)


State 39

   17 node_stmt: node_id attr_list .

    $default  reduce using rule 17 (node_stmt)


State 40

   42 edge_stmt: node_id edgeRHS .
   43          | node_id edgeRHS . attr_list

    T_LBRACK  shift, and go to state 24

    $default  reduce using rule 42 (edge_stmt)

    attr_list  go to state 62


State 41

   46 edgeRHS: edgeop . node_id
   47        | edgeop . node_id edgeRHS
   48        | edgeop . subgraph
   49        | edgeop . subgraph edgeRHS

    T_ID        shift, and go to state 63
    T_LBRACE    shift, and go to state 13
    T_SUBGRAPH  shift, and go to state 16

    node_id   go to state 64
    subgraph  go to state 65


State 42

   44 edge_stmt: subgraph edgeRHS .
   45          | subgraph edgeRHS . attr_list

    T_LBRACK  shift, and go to state 24

    $default  reduce using rule 44 (edge_stmt)

    attr_list  go to state 66


State 43

   36 a_list: T_ID . T_EQUALS T_ID T_SEMICOLON a_list
   37       | T_ID . T_EQUALS T_ID T_SEMICOLON
   38       | T_ID . T_EQUALS T_ID T_COMMA a_list
   39       | T_ID . T_EQUALS T_ID T_COMMA
   40       | T_ID . T_EQUALS T_ID a_list
   41       | T_ID . T_EQUALS T_ID

    T_EQUALS  shift, and go to state 67


State 44

   34 attr_list: T_LBRACK a_list . T_RBRACK attr_list
   35          | T_LBRACK a_list . T_RBRACK

    T_RBRACK  shift, and go to state 68


State 45

   15 stmt: T_ID T_EQUALS T_ID .

    $default  reduce using rule 15 (stmt)


State 46

   21 port: T_COLON T_ID . T_COLON compass_pt
   22     | T_COLON T_ID .

    T_COLON  shift, and go to state 69

    $default  reduce using rule 22 (port)


State 47

   24 compass_pt: T_N .

    $default  reduce using rule 24 (compass_pt)


State 48

   25 compass_pt: T_NE .

    $default  reduce using rule 25 (compass_pt)


State 49

   26 compass_pt: T_E .

    $default  reduce using rule 26 (compass_pt)


State 50

   27 compass_pt: T_SE .

    $default  reduce using rule 27 (compass_pt)


State 51

   28 compass_pt: T_S .

    $default  reduce using rule 28 (compass_pt)


State 52

   29 compass_pt: T_SW .

    $default  reduce using rule 29 (compass_pt)


State 53

   30 compass_pt: T_W .

    $default  reduce using rule 30 (compass_pt)


State 54

   31 compass_pt: T_NW .

    $default  reduce using rule 31 (compass_pt)


State 55

   32 compass_pt: T_C .

    $default  reduce using rule 32 (compass_pt)


State 56

   33 compass_pt: T_UNDERSCORE .

    $default  reduce using rule 33 (compass_pt)


State 57

   23 port: T_COLON compass_pt .

    $default  reduce using rule 23 (port)


State 58

   55 subgraph: T_LBRACE stmt_list T_RBRACE .

    $default  reduce using rule 55 (subgraph)


State 59

   57 subgraph: T_SUBGRAPH T_ID T_LBRACE . stmt_list T_RBRACE

    T_GRAPH     shift, and go to state 11
    T_ID        shift, and go to state 12
    T_LBRACE    shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_EDGE      shift, and go to state 15
    T_SUBGRAPH  shift, and go to state 16

    $default  reduce using rule 8 (stmt_list)

    stmt_list  go to state 70
    stmt       go to state 18
    node_stmt  go to state 19
    node_id    go to state 20
    edge_stmt  go to state 21
    attr_stmt  go to state 22
    subgraph   go to state 23


State 60

   56 subgraph: T_SUBGRAPH T_LBRACE stmt_list . T_RBRACE

    T_RBRACE  shift, and go to state 71


State 61

   11 stmt_list: stmt T_SEMICOLON stmt_list .

    $default  reduce using rule 11 (stmt_list)


State 62

   43 edge_stmt: node_id edgeRHS attr_list .

    $default  reduce using rule 43 (edge_stmt)


State 63

   19 node_id: T_ID . port
   20        | T_ID .

    T_COLON  shift, and go to state 27

    $default  reduce using rule 20 (node_id)

    port  go to state 28


State 64

   46 edgeRHS: edgeop node_id .
   47        | edgeop node_id . edgeRHS

    T_DEDGE  shift, and go to state 37
    T_UEDGE  shift, and go to state 38

    $default  reduce using rule 46 (edgeRHS)

    edgeRHS  go to state 72
    edgeop   go to state 41


State 65

   48 edgeRHS: edgeop subgraph .
   49        | edgeop subgraph . edgeRHS

    T_DEDGE  shift, and go to state 37
    T_UEDGE  shift, and go to state 38

    $default  reduce using rule 48 (edgeRHS)

    edgeRHS  go to state 73
    edgeop   go to state 41


State 66

   45 edge_stmt: subgraph edgeRHS attr_list .

    $default  reduce using rule 45 (edge_stmt)


State 67

   36 a_list: T_ID T_EQUALS . T_ID T_SEMICOLON a_list
   37       | T_ID T_EQUALS . T_ID T_SEMICOLON
   38       | T_ID T_EQUALS . T_ID T_COMMA a_list
   39       | T_ID T_EQUALS . T_ID T_COMMA
   40       | T_ID T_EQUALS . T_ID a_list
   41       | T_ID T_EQUALS . T_ID

    T_ID  shift, and go to state 74


State 68

   34 attr_list: T_LBRACK a_list T_RBRACK . attr_list
   35          | T_LBRACK a_list T_RBRACK .

    T_LBRACK  shift, and go to state 24

    $default  reduce using rule 35 (attr_list)

    attr_list  go to state 75


State 69

   21 port: T_COLON T_ID T_COLON . compass_pt

    T_N           shift, and go to state 47
    T_NE          shift, and go to state 48
    T_E           shift, and go to state 49
    T_SE          shift, and go to state 50
    T_S           shift, and go to state 51
    T_SW          shift, and go to state 52
    T_W           shift, and go to state 53
    T_NW          shift, and go to state 54
    T_C           shift, and go to state 55
    T_UNDERSCORE  shift, and go to state 56

    compass_pt  go to state 76


State 70

   57 subgraph: T_SUBGRAPH T_ID T_LBRACE stmt_list . T_RBRACE

    T_RBRACE  shift, and go to state 77


State 71

   56 subgraph: T_SUBGRAPH T_LBRACE stmt_list T_RBRACE .

    $default  reduce using rule 56 (subgraph)


State 72

   47 edgeRHS: edgeop node_id edgeRHS .

    $default  reduce using rule 47 (edgeRHS)


State 73

   49 edgeRHS: edgeop subgraph edgeRHS .

    $default  reduce using rule 49 (edgeRHS)


State 74

   36 a_list: T_ID T_EQUALS T_ID . T_SEMICOLON a_list
   37       | T_ID T_EQUALS T_ID . T_SEMICOLON
   38       | T_ID T_EQUALS T_ID . T_COMMA a_list
   39       | T_ID T_EQUALS T_ID . T_COMMA
   40       | T_ID T_EQUALS T_ID . a_list
   41       | T_ID T_EQUALS T_ID .

    T_ID         shift, and go to state 43
    T_SEMICOLON  shift, and go to state 78
    T_COMMA      shift, and go to state 79

    $default  reduce using rule 41 (a_list)

    a_list  go to state 80


State 75

   34 attr_list: T_LBRACK a_list T_RBRACK attr_list .

    $default  reduce using rule 34 (attr_list)


State 76

   21 port: T_COLON T_ID T_COLON compass_pt .

    $default  reduce using rule 21 (port)


State 77

   57 subgraph: T_SUBGRAPH T_ID T_LBRACE stmt_list T_RBRACE .

    $default  reduce using rule 57 (subgraph)


State 78

   36 a_list: T_ID T_EQUALS T_ID T_SEMICOLON . a_list
   37       | T_ID T_EQUALS T_ID T_SEMICOLON .

    T_ID  shift, and go to state 43

    $default  reduce using rule 37 (a_list)

    a_list  go to state 81


State 79

   38 a_list: T_ID T_EQUALS T_ID T_COMMA . a_list
   39       | T_ID T_EQUALS T_ID T_COMMA .

    T_ID  shift, and go to state 43

    $default  reduce using rule 39 (a_list)

    a_list  go to state 82


State 80

   40 a_list: T_ID T_EQUALS T_ID a_list .

    $default  reduce using rule 40 (a_list)


State 81

   36 a_list: T_ID T_EQUALS T_ID T_SEMICOLON a_list .

    $default  reduce using rule 36 (a_list)


State 82

   38 a_list: T_ID T_EQUALS T_ID T_COMMA a_list .

    $default  reduce using rule 38 (a_list)
